# SEA

./: .gitignore  README.md
jre/: release
jvmlib/: CMakeLists.txt  invoker.cpp  test.cpp
server/: HELP.md  build.gradle  settings.gradle
server/src/main/java/com/whm/sea/: SeaApplication.java
server/src/main/resources/: logback-spring.xml
server/src/test/java/com/whm/sea/: SeaApplicationTests.java
webapp/: .gitignore  README.md  angular.json  forge.config.js  main.js  package-lock.json  package.json  server.js
webapp/src/app/: app.component.html  app.component.ts  app.module.ts
webapp/src/app/layout/: layout.module.ts
webapp/src/app/layout/basic/: basic.component.ts
webapp/src/app/pages/splash/: splash.component.html  splash.component.ts
webapp/src/app/routes/: routes-routing.module.ts  routes.module.ts
